security: close session revocation gap and harden token/header/CORS handling
- JwtAuthFilter: inject UserRepository and verify session UUID still exists
  in DB on every request — revoked sessions now correctly rejected
- JwtUtil.isSessionTokenValid: validate tokenType=SESSION claim to prevent
  master tokens from being accepted as session tokens
- SecurityConfig: add X-Content-Type-Options and X-XSS-Protection headers;
  parse app.cors.allowed-origins as comma-separated list; set allowCredentials=false
- AuthServiceImpl: remove username from authentication failure log (prevents
  user enumeration via log access)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>